# python-template

./: .pre-commit-config.yaml  README.md  SetupProj.bat  TODO.txt  get_spec.py  pyproject.toml  requirements.txt
